--- a/strawberry_disease.json
+++ b/strawberry_disease.json
@@ -75,42 +75,54 @@
     {
       "名稱": "葉芽線蟲",
       "症狀": "寄生於嫩芽內，侵害生長點。導致葉片皺縮畸形、植株矮化。常誘發不定芽生長。",
-      "防治方法": "葉片皺縮畸形; 植株矮化; 只開一次花後停止生長",
+      "防治方法": "",
       "tag": {
         "類型": "蟲"
       },
       "資料來源": [],
-      "img": []
+      "img": ["https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Foliar_nematode_pathogen.jpg/500px-Foliar_nematode_pathogen.jpg"]
     },
     {
       "名稱": "葉部薊馬 / 花薊馬",
       "症狀": "銼吸式口器危害。葉部受害葉脈黑褐化；花器受害造成果實畸形、硬化、呈現銹色。",
-      "防治方法": "葉脈黑褐化; 果實畸形、銹色; 影響商品價值",
+      "防治方法": "",
       "tag": {
         "類型": "蟲"
       },
       "資料來源": [],
-      "img": []
+      "img": ["https://raw.githubusercontent.com/XPRAMT/xpramt.github.io/refs/heads/main/img/%E8%96%8A%E9%A6%AC.jpg"]
     },
     {
-      "名稱": "斜紋夜盜蟲",
+      "名稱": "斜紋夜蛾",
       "症狀": "晝伏夜出，雜食性。幼蟲群棲取食葉部、心梢或花器。10-11月發生密度最高。",
-      "防治方法": "晝伏夜出; 食害葉片及果實; 幼蟲具群棲性",
+      "防治方法": "",
       "tag": {
         "類型": "蟲"
       },
       "資料來源": [],
-      "img": []
+      "img": ["https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Spodoptera_litura1.jpg/500px-Spodoptera_litura1.jpg",
+      "https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Spodoptera_litura_male.jpg/500px-Spodoptera_litura_male.jpg"]
     },
     {
       "名稱": "二點葉蟎",
       "症狀": "群集葉背危害，葉片產生細小黃斑，嚴重時全葉枯萎並出現蜘蛛網狀物。",
-      "防治方法": "葉片細小黃斑; 葉片焦枯落葉; 出現蜘蛛網狀物",
+      "防治方法": "",
+      "tag": {
+        "類型": "蟲"
+      },
+      "資料來源": ["https://batwang66.blogspot.com/2012/12/two-spotted-spider-mite.html"],
+      "img": ["https://upload.wikimedia.org/wikipedia/commons/c/c5/Tetranychus-urticae.jpg"]
+    },
+    {
+      "名稱": "蚜蟲",
+      "症狀": "",
+      "防治方法": "",
       "tag": {
         "類型": "蟲"
       },
       "資料來源": [],
-      "img": []
+      "img": ["https://raw.githubusercontent.com/XPRAMT/xpramt.github.io/refs/heads/main/img/%E8%9A%9C%E8%9F%B2-2.jpg",
+      "https://raw.githubusercontent.com/XPRAMT/xpramt.github.io/refs/heads/main/img/%E8%9A%9C%E8%9F%B2-1.jpg"]
     }
   ],
   "缺素": [
